--- a/.conf/yasb/styles.css
+++ b/.conf/yasb/styles.css
@@ -316,3 +316,11 @@
     color: rgb(255, 255, 255);
     margin-top: -20px;
 }
+
+
+QToolTip {
+    padding: 4px;
+    color: white;
+    font-size: 12px;
+    background-color: rgba(36, 36, 36, 0.604);
+}
